Closed Bug 10617 Opened 26 years ago Closed 26 years ago

Loading folders is slow again

Categories

(MailNews Core :: Backend, defect, P3)

x86
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: scottputterman, Assigned: waterson)

Details

(Whiteboard: [Perf])

My 1500 message Inbox which used to take 3-4 seconds to load now takes about 140 seconds to load. I hear something changed recently. Chris, if I was supposed to give this to hyatt, please reassign.
Status: NEW → ASSIGNED
Target Milestone: M9
i'll take a first cut at it.
Okay, Hyatt and I came up with a fix for this. I'll check it in today.
thanks!
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Fix checked in. Righteous hacks coming soon for async case.
Whiteboard: [Perf]
The recent performance numbers show: 1000 msg folder POP (summary file exists): 6.38s with a standard deviation of 0.215 1000 msg folder POP (no summary file exists): 18.884s with a sd of 0.186 This is on a 133mhz pentium machine with 64mb RAM. What was the machine this bug was originally reported against?
i think the machine on which this was reported was a 450Mhz PIII. So, the numbers you've quoted seem to be relatively "fast", or at least, better than the 140s scottip originally reported :-)
Status: RESOLVED → VERIFIED
I wish I had a machine that fast. Ok, I'll mark this verified then.
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.