Bug 10617. Get folder performance back. We now _do not_ tell layout about individual content that gets appended during CreateContainerContents(), and instead wait until we've constructed all child nodes to do a ContentChanged() notification.